--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 			font-size:40px;
 			width:100%;
 			margin:20px;
+			margin-left:0px;
 			padding:0;
 		}
 		
@@ -30,6 +31,7 @@
 			opacity:0.7;
 			width:100%;
 			margin:20px;
+			margin-left:0px;
 			padding:0;
 		}
 		
@@ -56,6 +58,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+			text-align:left;
 		}
 		
 		header img {
