--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
 			padding:0;
 		}
 		
+		p {
+			font-size: 24px;
+		}
+		
         .container {
             display: flex;
             flex-wrap: wrap;
@@ -51,6 +55,7 @@
 			font-size:18px;
 			max-width:800px;
 			height:auto;
+			margin:30px; /* add this */
         }
 		
 		header {
@@ -72,6 +77,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+			text-align: center;
 		}
 		
 		.main-content div {
@@ -97,7 +103,7 @@
 		.main-content img {
 			width:250px;
 			border:10px solid white;
-			box-shadow:0 10px 16px 0 rgba(0,0,0,0.5),0 6px 20px 0 rgba(0,0,0,0.5) !important;
+			box-shadow:0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !important;
 		}
 		
 		.project {
@@ -155,6 +161,18 @@
 			margin-top:0px;
 		}
 		
+		@media (max-width: 1000px) { /* add this */
+			section {
+				flex-direction: column;
+				text-align: center;
+			}
+			
+			.column {
+				flex: 1;
+				text-align: center;
+			}
+		}
+		
 		@media (min-width: 768px) {
 			.footer-links {
 				flex-direction: column;
@@ -191,30 +209,30 @@
 	<div class="main-content">
 	<h2>My Projects</h2>
 	<section>
-		<div class="architecture"><h3>My Achitecture Project</h3>
+		<div class="column architecture"><h3>My Achitecture Project</h3>
 			<img src="./architecture.jpg">
 			<p>School Architectural Competition</p>
 		</div>
-		<div class="project"><h3>.</h3>
+		<div class="column project"><h3>.</h3>
 			<img src="./project.png">
 			<p>.</p>
 		</div>
-		<div class="project"><h3>.</h3>
+		<div class="column project"><h3>.</h3>
 			<img src="./project.png">
 			<p>.</p>
 		</div>
 	</section>
 
 	<section>
-		<div class="project"><h3>.</h3>
+		<div class="column project"><h3>.</h3>
 			<img src="./project.png">
 			<p>.</p>
 		</div>
-		<div class="project"><h3>.</h3>
+		<div class="column project"><h3>.</h3>
 			<img src="./project.png">
 			<p>.</p>
 		</div>
-		<div class="project"><h3>.</h3>
+		<div class="column project"><h3>.</h3>
 			<img src="./project.png">
 			<p>.</p>
 		</div>
