--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
 		
 		.main-content img {
 			width:250px;
+			height:250px;
+			object-fit: cover;
 			border:10px solid white;
 			box-shadow:0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !important;
 		}
