--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 	<header>
 		<div class="container">
 			<h1>Portfolio</h1>
-			<img id="logo" src="pp.png">
+			<img id="logo" src="pp.jpg">
 			<h2>Aladdin (ESFP)</h2>
 			<h3>Street Urchin of Agrabah</h3>
 			<p>Aladdin, a vibrant and charismatic individual, is on a quest to transform his life into a tale fit for royalty. With an ESFP personality, he exudes energy and enthusiasm in every endeavor. Aladdin's heart is drawn to the thrill of parkour, where he navigates urban landscapes with agility and finesse, reflecting his love for adventure.
